--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,3 +16,4 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           workingDirectory: "workers/hello-world"
+          command: deploy
